[package]
name = "smartcore-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartcore = { versioin = "0.2.0" , default-features = false, features = ["nalgebra-bindings", "ndarray-bindings", "datasets"]}
